<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="80dp"
        app:flow_horizontalBias="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextContent"
        android:layout_marginTop="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_avatar"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextContent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="@string/user_username" />


    <LinearLayout
        android:id="@+id/people_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/ic_people_description"
            android:src="@drawable/ic_people" />

        <TextView
            android:id="@+id/tv_follower"
            style="@style/TextContent"
            tools:text="@string/user_follower" />

        <ImageView
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/ic_dot_description"
            android:src="@drawable/ic_dot" />

        <TextView
            android:id="@+id/tv_following"
            style="@style/TextContent"
            android:layout_marginStart="5dp"
            tools:text="@string/user_following" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_repository"
        style="@style/TextContent"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/people_group"
        tools:text="@string/user_repository" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/TextContent"
        android:drawablePadding="10dp"
        app:drawableStartCompat="@drawable/ic_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_repository"
        tools:text="@string/user_company" />


    <TextView
        android:id="@+id/tv_location"
        style="@style/TextContent"
        android:drawablePadding="5dp"
        app:drawableStartCompat="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_company"
        tools:text="@string/user_location" />


</androidx.constraintlayout.widget.ConstraintLayout>